# qsipgaterestlib

./: CMakeLists.txt
qml/: main.qml
src/: CMakeLists.txt  main.cpp  parsereply.cpp  parsereply.h  replyhandler.cpp  replyhandler.h  uicontrol.cpp  uicontrol.h
tests/: CMakeLists.txt  exampletest.cpp
